# stofs2d-obs

./: .flake8  .gitignore  BATCH_PROCESSING.md  CI_CD_SETUP.md  CLI_IMPLEMENTATION.md  CONTRIBUTING.md  HOW_TO_RUN.md  LICENSE  PACKAGE_SUMMARY.md  QUICK_START.txt  README.md  TEST_COMMANDS.txt  UNIT_TESTS.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: basic_comparison.py  compare_side_by_side.py  compare_two_models_obs_with_diff.py  run_side_by_side.sh
stofs2d_obs/: __init__.py  cli.py  comparison.py  fort61.py  observations.py
tests/: __init__.py  conftest.py  test_cli.py  test_comparison.py  test_coops_matcher.py  test_fort61.py
